--- a/src/main/nodejs/day03/fileManage/views/index.ejs
+++ b/src/main/nodejs/day03/fileManage/views/index.ejs
@@ -35,12 +35,12 @@
 	<div class="container">
 		
 		<div class="row">
-			<%for(var i = 0; i < albums.length; i++){%>
+			<%for(var i = 0; i < dirs.length; i++){%>
 			<div class="col-xs-6 col-md-3">
 				<a href="#" class="thumbnail">
 					<img src="image/wenjianjia.jpg" alt="...">
 				</a>
-				<h4><%=albums[i]%></h4>
+				<h4><%=dirs[i]%></h4>
 			</div>
 			
 			<%}%>
