--- a/src/main/nodejs/day03/fileManage/front/views/index.html
+++ b/src/main/nodejs/day03/fileManage/front/views/index.html
@@ -38,17 +38,30 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">我的雲盤</a>
+					<!-- javascript:location.reload(); 点击当前html重新加载页面 -->
+					<a class="navbar-brand" href="javascript:location.reload();">我的雲盤</a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							<a href="#">
+							<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">
 								新建文件夹
 								<span class="sr-only">(current)</span>
 							</a>
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<div style="padding: 5px 5px 5px;">
+										<div class="input-group">
+											<input type="text" class="form-control" id="newFolderNameInput">
+											<span class="input-group-btn" onclick="createDir()">
+												<button class="btn btn-default" type="button">确认</button>
+											</span>
+										</div>
+									</div>
+								</li>
+							</ul>
 						</li>
 						<li>
 							<a href="#">上傳</a>
@@ -70,6 +83,9 @@
 		</nav>
 		<!-- 路径导航 -->
 		<ol class="breadcrumb" id="breadcrumbArea">
+			<li>
+				<a href="#" onclick="openPath(this)">/</a>
+			</li>
 		</ol>
 	</div>
 
@@ -83,7 +99,7 @@
 				<li class="active">{{name}}</li>
 			{{else}}
 				<li>
-					<a href="#">{{name}}</a>
+					<a href="#" onclick="openPath(this)">{{name}}</a>
 				</li>
 			{{/if}}
 		{{/each}}
@@ -91,15 +107,16 @@
 	<script type="text/x-handlebars-template" id="fileAndFolderAreaTemplate">
 		{{#each pathInfo}}
 			{{#if isFolder}}
-				<a href="#" class="list-group-item">
+				<a href="javascript:void(0)" class="list-group-item" ondblclick="openFolder(this)" val="{{name}}">
 					<input type="checkbox" class="idCheck" />
 					<span class="folderName">{{name}}</span>
-					<span class="badge">></span>
+					<span class="badge">↯</span>
 				</a>
 			{{else}}
-				<a href="#" class="list-group-item">
+				<a href="javascript:void(0)" class="list-group-item">
 					<input type="checkbox" class="idCheck" />
 					<span class="fileName">{{name}}</span>
+					<span class="badge">↯</span>
 				</a>
 			{{/if}}
 		{{/each}}
@@ -109,23 +126,73 @@
 	</script>
 
 
-	<script src="bootstrap/js/jQuery.js"></script>
-	<script src="bootstrap/js/bootstrap.js"></script>
-	<script src="https://cdn.bootcss.com/handlebars.js/4.7.3/handlebars.js"></script>
+	<script type="text/javascript" src="bootstrap/js/jQuery.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript" src="handlebars.js"></script>
+	<script type="text/javascript" src="common.js"></script>
 
 	<script>
-		var app = new App();
+		var page = new Page();
 		var baseUrl = "http://127.0.0.1:88";
-		//初始化导航栏
-		var breadcrumbPathArr = [ "/" ];
-		app.initBreadcrumb(breadcrumbPathArr);
-		//构造文件和文件夹区域
-		$.get(baseUrl, function(data) {
-			app.initFileAndFolderArea(data);
+		var breadcrumbPathArr = [];
+		$("#breadcrumbArea a").each(function() {
+			breadcrumbPathArr.push($(this).text());
 		});
 
+		initPage(baseUrl);
 
-		function App() {
+		//新建文件夹
+		function createDir() {
+			var newFolderName = $("#newFolderNameInput").val();
+			var basePath = breadcrumbPathArr.join("/");
+			$.ajax({
+				type : 'post',
+				url : baseUrl + '/createDir', //一样接口路径
+				data : {
+					"basePath" : basePath,
+					"newFolderName" : newFolderName
+				},
+				success : function(data) {
+					//这个data就是后台返回的res.write（）或者是res.send()
+					$("#newFolderNameInput").val("");
+					initPage(baseUrl + breadcrumbPathArr.join("/"));
+				},
+				error : function(err) {
+					console.log('请求出错！');
+				}
+			});
+		}
+
+		//点击面包屑导航
+		function openPath(dom) {
+			breadcrumbPathArr = [];
+			$("#breadcrumbArea a").each(function() {
+				// 遍历当前节点，如果该节点在点击的节点之前，则放入面包屑导航的数组
+				if ($(this).index() <= $(dom).index()) {
+					breadcrumbPathArr.push($(this).text());
+				}
+			});
+			initPage(baseUrl + breadcrumbPathArr.join("/"));
+		}
+
+		//打开文件夹
+		function openFolder(dom) {
+			var folderName = $(dom).attr("val");
+			breadcrumbPathArr.push(folderName);
+			initPage(baseUrl + breadcrumbPathArr.join("/"));
+		}
+
+		// 构造页面
+		function initPage(url) {
+			$.get(url, function(data) {
+				//构造文件和文件夹区域
+				page.initFileAndFolderArea(data);
+				//构造导航栏
+				page.initBreadcrumb(breadcrumbPathArr);
+			});
+		}
+
+		function Page() {
 			/**
 			 *[ "/" , "home" , "data"]
 			 * 接收路径数组，返回面包屑导航HTML，除最后一个以外可点击
@@ -136,12 +203,9 @@
 
 				for (var i = 0; i < breadcrumbPathArr.length; i++) {
 					var breadcrumbJson = {}
-					if (i == breadcrumbPathArr.length) {
-						breadcrumbJson.isLast = true;
-					} else {
-						breadcrumbJson.isLast = false;
-					}
 					breadcrumbJson.name = breadcrumbPathArr[i];
+					breadcrumbJson.isLast = i + 1 == breadcrumbPathArr.length ? true
+							: false
 					breadcrumb.push(breadcrumbJson);
 					data.breadcrumb = breadcrumb;
 				}
@@ -173,6 +237,7 @@
 						pathInfoJson.name = folderNames[i];
 						pathInfoJson.isFolder = true;
 						pathInfo.push(pathInfoJson);
+						data.pathInfo = pathInfo;
 					}
 					var fileNames = fileAndDirNames.allFileNames;
 					for (var i = 0; i < fileNames.length; i++) {
